k8s/shiny-farkle-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shiny-farkle-deploy
  labels:
    app: shiny-farkle
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: shiny-farkle
    spec:
      containers:
      - name: master
        imagePullPolicy: Always
        image: gcr.io/blog-180218/shiny-farkle:latest
        ports:
        - containerPort: 3838
